--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-tg-clean = "telegram_cleaner.cli:main"
+tg-clean = "telegram_cleaner.cli:cli"
